--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <form action="" method="post">
+    <form action="http://zend-allade.fjeclot.net/projecte/auth.php" method="post">
         <div class="form-group">
             <label for="exampleInputEmail1">Usuari</label>
             <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
