solucionats problemes CRUD

--- a/CRUD/visualitzar.html
+++ b/CRUD/visualitzar.html
@@ -7,7 +7,7 @@
 
 <body>
     <p>VEURE INFORMACIÓ USUARI</p>
-    <form action="./veure_client.php" method="POST">
+    <form action="./visualitzar.php" method="POST">
         <label for="id">Indica el id d'usuari(uid):</label><br>
         <input type="text" name="id"><br> <br>
         <label for="fname">Indica la unitat organitzativa</label><br>
