--- a/menu.html
+++ b/menu.html
@@ -24,16 +24,16 @@
 <body>
     <div id="menu-container">
         <div>
-            <a href="">Visualitzar</a>
+            <a href="http://zend-allade.fjeclot.net/projecte/CRUD/visualitzar.html">Visualitzar</a>
         </div>
         <div>
-            <a href="">Afegir</a>
+            <a href="http://zend-allade.fjeclot.net/projecte/CRUD/afegir.html">Afegir</a>
         </div>
         <div>
-            <a href="">Esborrar</a>
+            <a href="http://zend-allade.fjeclot.net/projecte/CRUD/esborrar.php">Esborrar</a>
         </div>
         <div>
-            <a href="">Modificar</a>
+            <a href="http://zend-allade.fjeclot.net/projecte/CRUD/modificar.php">Modificar</a>
         </div>
     </div>
 </body>
