--- a/CRUD/afegir.html
+++ b/CRUD/afegir.html
@@ -24,7 +24,7 @@
 </head>
 <body>
     <h1><u>Afegeix un Client</u></h1>
-    <form method="post" action="afegir_client.php">
+    <form method="post" action="afegir.php">
         <div class="fons" >
             <div class="form-row">
                 <div class="form-group">
