--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <form action="http://zend-allade.fjeclot.net/projecte/auth.php" method="post">
         <div class="form-group">
             <label for="exampleInputEmail1">Usuari</label>
-            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
+            <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
                 placeholder="Enter email" name="usuari">
         </div>
         <div class="form-group">
